--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'org.testng:testng:6.9.4'
     compile 'org.apache.commons:commons-math3:3.5'
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'commons-io:commons-io:2.4'
 }
 
 test {
